# TaskbarHider

./: CMakeLists.txt  README.md  TaskbarHider.cpp  TaskbarHider.h
libs/: iniParser.h
src/: taskbarManager.cpp  taskbarManager.h  taskbarTray.cpp  taskbarTray.h
